FISH-8652: Use Arrays.asList in JdbcDataConnection.